  `interface', `object', `class') should no longer impose problems when
  occurring in programs of other languages.

- Several memory leaks have been plugged. (1)


User Interface
--------------

- You can interact with the debugger while the program is running;
  DDD automatically interrupts and resumes debuggee execution.  See the
  `stopAndContinue' resource.

- Interrupts (Ctrl+C) from the controlling TTY can be issued multiple times.

- In LessTif, combo boxes (drop-down text boxes) no longer shrink.

- In LessTif, Text selection works better.

- In LessTif, the Backspace and Delete keys in the debugger console 
  work better.

- Forwarding of keyboard events from the source window into the
  debugger console is now optional.  See the `consoleHasFocus' resource. (10)


Installation
------------

- Several installation details have changed.  Be sure to read the
  `INSTALL' file for new installation instructions.

- Several DDD resources (such as the application defaults) now reside
  in separate files, reducing DDD executable size and memory footprint 
  by about 300k.

- To run DDD from the build directory (i.e. before installing), you
  must set the DDD_HOME and XUSERFILESEARCH environment variables.
  See the `INSTALL' file for details.

- DDD Makefiles are now GNU standards-compliant and generated by automake.

- DDD Makefiles use libtool for generic shared library support.

- A bad dependency on $(SHELL) in the Makefile has been fixed.  This
  caused unnecessary calls of flex and bison in the distribution. (9)

- A bad wildcard use in the Makefile has been fixed. (3)

- A compilation problem in `PannedGE.C' with some GCC variants has been fixed.

- DDD now compiles cleanly even with `gcc -Wwrite-strings'.  This
  avoids several warnings/errors on C++ compilers other than GCC. (1)

- The `--configuration' option now gives more information about the
  compiler being used to compile DDD. (1)

- ddd.texi rules in the Makefile have been fixed. (4)
